--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
         </div>
         <div class="Chaussure">
-            <img src="images/tel1.png" alt="Kswiss">
+            <img src="images/tel1.png" alt="kswiss">
 
 
         </div>
